C to VeSPA Compiler/Assembler/Step1/asm_parser.output
Terminais não usados na gramática

    TOKEN_ERROR


Estado 134 conflitos: 2 troca/redução
Estado 135 conflitos: 2 troca/redução


Gramática

    0 $accept: prog $end

    1 prog: prog TOKEN_ENDFILE
    2     | prog stmt
    3     | stmt

    4 stmt: add_stmt
    5     | sub_stmt
    6     | or_stmt
    7     | and_stmt
    8     | not_stmt
    9     | xor_stmt
   10     | cmp_stmt
   11     | branch_stmt
   12     | move_stmt
   13     | jump_stmt
   14     | load_stmt
   15     | store_stmt
   16     | push_stmt
   17     | pop_stmt
   18     | reti_stmt
   19     | halt_stmt
   20     | nop_stmt
   21     | byte_stmt
   22     | word_stmt
   23     | alloc_stmt
   24     | org_stmt
   25     | equ_stmt
   26     | label

   27 add_stmt: TOKEN_ADD TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   28         | TOKEN_ADD TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

   29 sub_stmt: TOKEN_SUB TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   30         | TOKEN_SUB TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

   31 or_stmt: TOKEN_OR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   32        | TOKEN_OR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

   33 and_stmt: TOKEN_AND TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   34         | TOKEN_AND TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

   35 xor_stmt: TOKEN_XOR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   36         | TOKEN_XOR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

   37 not_stmt: TOKEN_NOT TOKEN_REG TOKEN_COMMA TOKEN_REG
   38         | TOKEN_NOT TOKEN_REG TOKEN_COMMA immediate

   39 cmp_stmt: TOKEN_CMP TOKEN_REG TOKEN_COMMA TOKEN_REG
   40         | TOKEN_CMP TOKEN_REG TOKEN_COMMA immediate

   41 branch_stmt: TOKEN_BRANCH TOKEN_IDENTIFIER
   42            | TOKEN_BRANCH immediate
   43            | TOKEN_BRANCH TOKEN_DOLLAR

   44 move_stmt: TOKEN_MOVE TOKEN_REG TOKEN_COMMA TOKEN_REG

   45 jump_stmt: TOKEN_JUMP TOKEN_REG TOKEN_COMMA immediate
   46          | TOKEN_JUMP_LINK TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

   47 load_stmt: TOKEN_LOAD_DIRECT TOKEN_REG TOKEN_COMMA immediate
   48          | TOKEN_LOAD_IMMEDIATE TOKEN_REG TOKEN_COMMA immediate
   49          | TOKEN_LOAD_INDEXED TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

   50 store_stmt: TOKEN_STORE_DIRECT TOKEN_REG TOKEN_COMMA immediate
   51           | TOKEN_STORE_INDEXED TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

   52 push_stmt: TOKEN_PUSH TOKEN_REG

   53 pop_stmt: TOKEN_POP TOKEN_REG

   54 reti_stmt: TOKEN_RETI

   55 halt_stmt: TOKEN_HALT

   56 nop_stmt: TOKEN_NOP

   57 byte_stmt: TOKEN_BYTE TOKEN_NUMBER

   58 word_stmt: TOKEN_WORD TOKEN_NUMBER

   59 alloc_stmt: TOKEN_ALLOC TOKEN_IDENTIFIER TOKEN_NUMBER

   60 org_stmt: TOKEN_ORG TOKEN_NUMBER

   61 equ_stmt: TOKEN_EQU TOKEN_IDENTIFIER TOKEN_COMMA expression

   62 label: TOKEN_IDENTIFIER TOKEN_COLON

   63 immediate: TOKEN_CARDINAL expression

   64 expression: TOKEN_LEFT_PAREN expression TOKEN_RIGHT_PAREN
   65           | expression TOKEN_PLUS expression
   66           | expression TOKEN_MINUS expression
   67           | TOKEN_PLUS TOKEN_NUMBER
   68           | TOKEN_MINUS TOKEN_NUMBER
   69           | TOKEN_NUMBER


Terminais, com regras onde aparecem

    $end (0) 0
    error (256)
    TOKEN_ADD (258) 27 28
    TOKEN_SUB (259) 29 30
    TOKEN_OR (260) 31 32
    TOKEN_AND (261) 33 34
    TOKEN_NOT (262) 37 38
    TOKEN_XOR (263) 35 36
    TOKEN_CMP (264) 39 40
    TOKEN_BRANCH (265) 41 42 43
    TOKEN_JUMP (266) 45
    TOKEN_JUMP_LINK (267) 46
    TOKEN_MOVE (268) 44
    TOKEN_LOAD_DIRECT (269) 47
    TOKEN_LOAD_IMMEDIATE (270) 48
    TOKEN_LOAD_INDEXED (271) 49
    TOKEN_STORE_DIRECT (272) 50
    TOKEN_STORE_INDEXED (273) 51
    TOKEN_PUSH (274) 52
    TOKEN_POP (275) 53
    TOKEN_RETI (276) 54
    TOKEN_HALT (277) 55
    TOKEN_NOP (278) 56
    TOKEN_NUMBER (279) 57 58 59 60 67 68 69
    TOKEN_REG (280) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 44 45 46 47 48 49 50 51 52 53
    TOKEN_IDENTIFIER (281) 41 59 61 62
    TOKEN_ENDFILE (282) 1
    TOKEN_ERROR (283)
    TOKEN_COMMA (284) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 44 45 46 47 48 49 50 51 61
    TOKEN_CARDINAL (285) 63
    TOKEN_COLON (286) 62
    TOKEN_DOLLAR (287) 43
    TOKEN_BYTE (288) 57
    TOKEN_WORD (289) 58
    TOKEN_ALLOC (290) 59
    TOKEN_ORG (291) 60
    TOKEN_EQU (292) 61
    TOKEN_PLUS (293) 65 67
    TOKEN_MINUS (294) 66 68
    TOKEN_LEFT_PAREN (295) 64
    TOKEN_RIGHT_PAREN (296) 64


Não terminais, com regras onde aparecem

    $accept (42)
        à esquerda: 0
    prog (43)
        à esquerda: 1 2 3
        à direita: 0 1 2
    stmt (44)
        à esquerda: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
        à direita: 2 3
    add_stmt (45)
        à esquerda: 27 28
        à direita: 4
    sub_stmt (46)
        à esquerda: 29 30
        à direita: 5
    or_stmt (47)
        à esquerda: 31 32
        à direita: 6
    and_stmt (48)
        à esquerda: 33 34
        à direita: 7
    xor_stmt (49)
        à esquerda: 35 36
        à direita: 9
    not_stmt (50)
        à esquerda: 37 38
        à direita: 8
    cmp_stmt (51)
        à esquerda: 39 40
        à direita: 10
    branch_stmt (52)
        à esquerda: 41 42 43
        à direita: 11
    move_stmt (53)
        à esquerda: 44
        à direita: 12
    jump_stmt (54)
        à esquerda: 45 46
        à direita: 13
    load_stmt (55)
        à esquerda: 47 48 49
        à direita: 14
    store_stmt (56)
        à esquerda: 50 51
        à direita: 15
    push_stmt (57)
        à esquerda: 52
        à direita: 16
    pop_stmt (58)
        à esquerda: 53
        à direita: 17
    reti_stmt (59)
        à esquerda: 54
        à direita: 18
    halt_stmt (60)
        à esquerda: 55
        à direita: 19
    nop_stmt (61)
        à esquerda: 56
        à direita: 20
    byte_stmt (62)
        à esquerda: 57
        à direita: 21
    word_stmt (63)
        à esquerda: 58
        à direita: 22
    alloc_stmt (64)
        à esquerda: 59
        à direita: 23
    org_stmt (65)
        à esquerda: 60
        à direita: 24
    equ_stmt (66)
        à esquerda: 61
        à direita: 25
    label (67)
        à esquerda: 62
        à direita: 26
    immediate (68)
        à esquerda: 63
        à direita: 28 30 32 34 36 38 40 42 45 46 47 48 49 50 51
    expression (69)
        à esquerda: 64 65 66 67 68 69
        à direita: 61 63 64 65 66


Estado 0

    0 $accept: • prog $end

    TOKEN_ADD             troca e vai para estado 1
    TOKEN_SUB             troca e vai para estado 2
    TOKEN_OR              troca e vai para estado 3
    TOKEN_AND             troca e vai para estado 4
    TOKEN_NOT             troca e vai para estado 5
    TOKEN_XOR             troca e vai para estado 6
    TOKEN_CMP             troca e vai para estado 7
    TOKEN_BRANCH          troca e vai para estado 8
    TOKEN_JUMP            troca e vai para estado 9
    TOKEN_JUMP_LINK       troca e vai para estado 10
    TOKEN_MOVE            troca e vai para estado 11
    TOKEN_LOAD_DIRECT     troca e vai para estado 12
    TOKEN_LOAD_IMMEDIATE  troca e vai para estado 13
    TOKEN_LOAD_INDEXED    troca e vai para estado 14
    TOKEN_STORE_DIRECT    troca e vai para estado 15
    TOKEN_STORE_INDEXED   troca e vai para estado 16
    TOKEN_PUSH            troca e vai para estado 17
    TOKEN_POP             troca e vai para estado 18
    TOKEN_RETI            troca e vai para estado 19
    TOKEN_HALT            troca e vai para estado 20
    TOKEN_NOP             troca e vai para estado 21
    TOKEN_IDENTIFIER      troca e vai para estado 22
    TOKEN_BYTE            troca e vai para estado 23
    TOKEN_WORD            troca e vai para estado 24
    TOKEN_ALLOC           troca e vai para estado 25
    TOKEN_ORG             troca e vai para estado 26
    TOKEN_EQU             troca e vai para estado 27

    prog         vai para estado 28
    stmt         vai para estado 29
    add_stmt     vai para estado 30
    sub_stmt     vai para estado 31
    or_stmt      vai para estado 32
    and_stmt     vai para estado 33
    xor_stmt     vai para estado 34
    not_stmt     vai para estado 35
    cmp_stmt     vai para estado 36
    branch_stmt  vai para estado 37
    move_stmt    vai para estado 38
    jump_stmt    vai para estado 39
    load_stmt    vai para estado 40
    store_stmt   vai para estado 41
    push_stmt    vai para estado 42
    pop_stmt     vai para estado 43
    reti_stmt    vai para estado 44
    halt_stmt    vai para estado 45
    nop_stmt     vai para estado 46
    byte_stmt    vai para estado 47
    word_stmt    vai para estado 48
    alloc_stmt   vai para estado 49
    org_stmt     vai para estado 50
    equ_stmt     vai para estado 51
    label        vai para estado 52


Estado 1

   27 add_stmt: TOKEN_ADD • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   28         | TOKEN_ADD • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 53


Estado 2

   29 sub_stmt: TOKEN_SUB • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   30         | TOKEN_SUB • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 54


Estado 3

   31 or_stmt: TOKEN_OR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   32        | TOKEN_OR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 55


Estado 4

   33 and_stmt: TOKEN_AND • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   34         | TOKEN_AND • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 56


Estado 5

   37 not_stmt: TOKEN_NOT • TOKEN_REG TOKEN_COMMA TOKEN_REG
   38         | TOKEN_NOT • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 57


Estado 6

   35 xor_stmt: TOKEN_XOR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   36         | TOKEN_XOR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 58


Estado 7

   39 cmp_stmt: TOKEN_CMP • TOKEN_REG TOKEN_COMMA TOKEN_REG
   40         | TOKEN_CMP • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 59


Estado 8

   41 branch_stmt: TOKEN_BRANCH • TOKEN_IDENTIFIER
   42            | TOKEN_BRANCH • immediate
   43            | TOKEN_BRANCH • TOKEN_DOLLAR

    TOKEN_IDENTIFIER  troca e vai para estado 60
    TOKEN_CARDINAL    troca e vai para estado 61
    TOKEN_DOLLAR      troca e vai para estado 62

    immediate  vai para estado 63


Estado 9

   45 jump_stmt: TOKEN_JUMP • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 64


Estado 10

   46 jump_stmt: TOKEN_JUMP_LINK • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 65


Estado 11

   44 move_stmt: TOKEN_MOVE • TOKEN_REG TOKEN_COMMA TOKEN_REG

    TOKEN_REG  troca e vai para estado 66


Estado 12

   47 load_stmt: TOKEN_LOAD_DIRECT • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 67


Estado 13

   48 load_stmt: TOKEN_LOAD_IMMEDIATE • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 68


Estado 14

   49 load_stmt: TOKEN_LOAD_INDEXED • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 69


Estado 15

   50 store_stmt: TOKEN_STORE_DIRECT • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 70


Estado 16

   51 store_stmt: TOKEN_STORE_INDEXED • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 71


Estado 17

   52 push_stmt: TOKEN_PUSH • TOKEN_REG

    TOKEN_REG  troca e vai para estado 72


Estado 18

   53 pop_stmt: TOKEN_POP • TOKEN_REG

    TOKEN_REG  troca e vai para estado 73


Estado 19

   54 reti_stmt: TOKEN_RETI •

    $default  redução com regra 54 (reti_stmt)


Estado 20

   55 halt_stmt: TOKEN_HALT •

    $default  redução com regra 55 (halt_stmt)


Estado 21

   56 nop_stmt: TOKEN_NOP •

    $default  redução com regra 56 (nop_stmt)


Estado 22

   62 label: TOKEN_IDENTIFIER • TOKEN_COLON

    TOKEN_COLON  troca e vai para estado 74


Estado 23

   57 byte_stmt: TOKEN_BYTE • TOKEN_NUMBER

    TOKEN_NUMBER  troca e vai para estado 75


Estado 24

   58 word_stmt: TOKEN_WORD • TOKEN_NUMBER

    TOKEN_NUMBER  troca e vai para estado 76


Estado 25

   59 alloc_stmt: TOKEN_ALLOC • TOKEN_IDENTIFIER TOKEN_NUMBER

    TOKEN_IDENTIFIER  troca e vai para estado 77


Estado 26

   60 org_stmt: TOKEN_ORG • TOKEN_NUMBER

    TOKEN_NUMBER  troca e vai para estado 78


Estado 27

   61 equ_stmt: TOKEN_EQU • TOKEN_IDENTIFIER TOKEN_COMMA expression

    TOKEN_IDENTIFIER  troca e vai para estado 79


Estado 28

    0 $accept: prog • $end
    1 prog: prog • TOKEN_ENDFILE
    2     | prog • stmt

    $end                  troca e vai para estado 80
    TOKEN_ADD             troca e vai para estado 1
    TOKEN_SUB             troca e vai para estado 2
    TOKEN_OR              troca e vai para estado 3
    TOKEN_AND             troca e vai para estado 4
    TOKEN_NOT             troca e vai para estado 5
    TOKEN_XOR             troca e vai para estado 6
    TOKEN_CMP             troca e vai para estado 7
    TOKEN_BRANCH          troca e vai para estado 8
    TOKEN_JUMP            troca e vai para estado 9
    TOKEN_JUMP_LINK       troca e vai para estado 10
    TOKEN_MOVE            troca e vai para estado 11
    TOKEN_LOAD_DIRECT     troca e vai para estado 12
    TOKEN_LOAD_IMMEDIATE  troca e vai para estado 13
    TOKEN_LOAD_INDEXED    troca e vai para estado 14
    TOKEN_STORE_DIRECT    troca e vai para estado 15
    TOKEN_STORE_INDEXED   troca e vai para estado 16
    TOKEN_PUSH            troca e vai para estado 17
    TOKEN_POP             troca e vai para estado 18
    TOKEN_RETI            troca e vai para estado 19
    TOKEN_HALT            troca e vai para estado 20
    TOKEN_NOP             troca e vai para estado 21
    TOKEN_IDENTIFIER      troca e vai para estado 22
    TOKEN_ENDFILE         troca e vai para estado 81
    TOKEN_BYTE            troca e vai para estado 23
    TOKEN_WORD            troca e vai para estado 24
    TOKEN_ALLOC           troca e vai para estado 25
    TOKEN_ORG             troca e vai para estado 26
    TOKEN_EQU             troca e vai para estado 27

    stmt         vai para estado 82
    add_stmt     vai para estado 30
    sub_stmt     vai para estado 31
    or_stmt      vai para estado 32
    and_stmt     vai para estado 33
    xor_stmt     vai para estado 34
    not_stmt     vai para estado 35
    cmp_stmt     vai para estado 36
    branch_stmt  vai para estado 37
    move_stmt    vai para estado 38
    jump_stmt    vai para estado 39
    load_stmt    vai para estado 40
    store_stmt   vai para estado 41
    push_stmt    vai para estado 42
    pop_stmt     vai para estado 43
    reti_stmt    vai para estado 44
    halt_stmt    vai para estado 45
    nop_stmt     vai para estado 46
    byte_stmt    vai para estado 47
    word_stmt    vai para estado 48
    alloc_stmt   vai para estado 49
    org_stmt     vai para estado 50
    equ_stmt     vai para estado 51
    label        vai para estado 52


Estado 29

    3 prog: stmt •

    $default  redução com regra 3 (prog)


Estado 30

    4 stmt: add_stmt •

    $default  redução com regra 4 (stmt)


Estado 31

    5 stmt: sub_stmt •

    $default  redução com regra 5 (stmt)


Estado 32

    6 stmt: or_stmt •

    $default  redução com regra 6 (stmt)


Estado 33

    7 stmt: and_stmt •

    $default  redução com regra 7 (stmt)


Estado 34

    9 stmt: xor_stmt •

    $default  redução com regra 9 (stmt)


Estado 35

    8 stmt: not_stmt •

    $default  redução com regra 8 (stmt)


Estado 36

   10 stmt: cmp_stmt •

    $default  redução com regra 10 (stmt)


Estado 37

   11 stmt: branch_stmt •

    $default  redução com regra 11 (stmt)


Estado 38

   12 stmt: move_stmt •

    $default  redução com regra 12 (stmt)


Estado 39

   13 stmt: jump_stmt •

    $default  redução com regra 13 (stmt)


Estado 40

   14 stmt: load_stmt •

    $default  redução com regra 14 (stmt)


Estado 41

   15 stmt: store_stmt •

    $default  redução com regra 15 (stmt)


Estado 42

   16 stmt: push_stmt •

    $default  redução com regra 16 (stmt)


Estado 43

   17 stmt: pop_stmt •

    $default  redução com regra 17 (stmt)


Estado 44

   18 stmt: reti_stmt •

    $default  redução com regra 18 (stmt)


Estado 45

   19 stmt: halt_stmt •

    $default  redução com regra 19 (stmt)


Estado 46

   20 stmt: nop_stmt •

    $default  redução com regra 20 (stmt)


Estado 47

   21 stmt: byte_stmt •

    $default  redução com regra 21 (stmt)


Estado 48

   22 stmt: word_stmt •

    $default  redução com regra 22 (stmt)


Estado 49

   23 stmt: alloc_stmt •

    $default  redução com regra 23 (stmt)


Estado 50

   24 stmt: org_stmt •

    $default  redução com regra 24 (stmt)


Estado 51

   25 stmt: equ_stmt •

    $default  redução com regra 25 (stmt)


Estado 52

   26 stmt: label •

    $default  redução com regra 26 (stmt)


Estado 53

   27 add_stmt: TOKEN_ADD TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   28         | TOKEN_ADD TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 83


Estado 54

   29 sub_stmt: TOKEN_SUB TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   30         | TOKEN_SUB TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 84


Estado 55

   31 or_stmt: TOKEN_OR TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   32        | TOKEN_OR TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 85


Estado 56

   33 and_stmt: TOKEN_AND TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   34         | TOKEN_AND TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 86


Estado 57

   37 not_stmt: TOKEN_NOT TOKEN_REG • TOKEN_COMMA TOKEN_REG
   38         | TOKEN_NOT TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 87


Estado 58

   35 xor_stmt: TOKEN_XOR TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   36         | TOKEN_XOR TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 88


Estado 59

   39 cmp_stmt: TOKEN_CMP TOKEN_REG • TOKEN_COMMA TOKEN_REG
   40         | TOKEN_CMP TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 89


Estado 60

   41 branch_stmt: TOKEN_BRANCH TOKEN_IDENTIFIER •

    $default  redução com regra 41 (branch_stmt)


Estado 61

   63 immediate: TOKEN_CARDINAL • expression

    TOKEN_NUMBER      troca e vai para estado 90
    TOKEN_PLUS        troca e vai para estado 91
    TOKEN_MINUS       troca e vai para estado 92
    TOKEN_LEFT_PAREN  troca e vai para estado 93

    expression  vai para estado 94


Estado 62

   43 branch_stmt: TOKEN_BRANCH TOKEN_DOLLAR •

    $default  redução com regra 43 (branch_stmt)


Estado 63

   42 branch_stmt: TOKEN_BRANCH immediate •

    $default  redução com regra 42 (branch_stmt)


Estado 64

   45 jump_stmt: TOKEN_JUMP TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 95


Estado 65

   46 jump_stmt: TOKEN_JUMP_LINK TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 96


Estado 66

   44 move_stmt: TOKEN_MOVE TOKEN_REG • TOKEN_COMMA TOKEN_REG

    TOKEN_COMMA  troca e vai para estado 97


Estado 67

   47 load_stmt: TOKEN_LOAD_DIRECT TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 98


Estado 68

   48 load_stmt: TOKEN_LOAD_IMMEDIATE TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 99


Estado 69

   49 load_stmt: TOKEN_LOAD_INDEXED TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 100


Estado 70

   50 store_stmt: TOKEN_STORE_DIRECT TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 101


Estado 71

   51 store_stmt: TOKEN_STORE_INDEXED TOKEN_REG • TOKEN_COMMA TOKEN_REG TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 102


Estado 72

   52 push_stmt: TOKEN_PUSH TOKEN_REG •

    $default  redução com regra 52 (push_stmt)


Estado 73

   53 pop_stmt: TOKEN_POP TOKEN_REG •

    $default  redução com regra 53 (pop_stmt)


Estado 74

   62 label: TOKEN_IDENTIFIER TOKEN_COLON •

    $default  redução com regra 62 (label)


Estado 75

   57 byte_stmt: TOKEN_BYTE TOKEN_NUMBER •

    $default  redução com regra 57 (byte_stmt)


Estado 76

   58 word_stmt: TOKEN_WORD TOKEN_NUMBER •

    $default  redução com regra 58 (word_stmt)


Estado 77

   59 alloc_stmt: TOKEN_ALLOC TOKEN_IDENTIFIER • TOKEN_NUMBER

    TOKEN_NUMBER  troca e vai para estado 103


Estado 78

   60 org_stmt: TOKEN_ORG TOKEN_NUMBER •

    $default  redução com regra 60 (org_stmt)


Estado 79

   61 equ_stmt: TOKEN_EQU TOKEN_IDENTIFIER • TOKEN_COMMA expression

    TOKEN_COMMA  troca e vai para estado 104


Estado 80

    0 $accept: prog $end •

    $default  aceitar


Estado 81

    1 prog: prog TOKEN_ENDFILE •

    $default  redução com regra 1 (prog)


Estado 82

    2 prog: prog stmt •

    $default  redução com regra 2 (prog)


Estado 83

   27 add_stmt: TOKEN_ADD TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA TOKEN_REG
   28         | TOKEN_ADD TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 105


Estado 84

   29 sub_stmt: TOKEN_SUB TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA TOKEN_REG
   30         | TOKEN_SUB TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 106


Estado 85

   31 or_stmt: TOKEN_OR TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA TOKEN_REG
   32        | TOKEN_OR TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 107


Estado 86

   33 and_stmt: TOKEN_AND TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA TOKEN_REG
   34         | TOKEN_AND TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 108


Estado 87

   37 not_stmt: TOKEN_NOT TOKEN_REG TOKEN_COMMA • TOKEN_REG
   38         | TOKEN_NOT TOKEN_REG TOKEN_COMMA • immediate

    TOKEN_REG       troca e vai para estado 109
    TOKEN_CARDINAL  troca e vai para estado 61

    immediate  vai para estado 110


Estado 88

   35 xor_stmt: TOKEN_XOR TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA TOKEN_REG
   36         | TOKEN_XOR TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 111


Estado 89

   39 cmp_stmt: TOKEN_CMP TOKEN_REG TOKEN_COMMA • TOKEN_REG
   40         | TOKEN_CMP TOKEN_REG TOKEN_COMMA • immediate

    TOKEN_REG       troca e vai para estado 112
    TOKEN_CARDINAL  troca e vai para estado 61

    immediate  vai para estado 113


Estado 90

   69 expression: TOKEN_NUMBER •

    $default  redução com regra 69 (expression)


Estado 91

   67 expression: TOKEN_PLUS • TOKEN_NUMBER

    TOKEN_NUMBER  troca e vai para estado 114


Estado 92

   68 expression: TOKEN_MINUS • TOKEN_NUMBER

    TOKEN_NUMBER  troca e vai para estado 115


Estado 93

   64 expression: TOKEN_LEFT_PAREN • expression TOKEN_RIGHT_PAREN

    TOKEN_NUMBER      troca e vai para estado 90
    TOKEN_PLUS        troca e vai para estado 91
    TOKEN_MINUS       troca e vai para estado 92
    TOKEN_LEFT_PAREN  troca e vai para estado 93

    expression  vai para estado 116


Estado 94

   63 immediate: TOKEN_CARDINAL expression •
   65 expression: expression • TOKEN_PLUS expression
   66           | expression • TOKEN_MINUS expression

    TOKEN_PLUS   troca e vai para estado 117
    TOKEN_MINUS  troca e vai para estado 118

    $default  redução com regra 63 (immediate)


Estado 95

   45 jump_stmt: TOKEN_JUMP TOKEN_REG TOKEN_COMMA • immediate

    TOKEN_CARDINAL  troca e vai para estado 61

    immediate  vai para estado 119


Estado 96

   46 jump_stmt: TOKEN_JUMP_LINK TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 120


Estado 97

   44 move_stmt: TOKEN_MOVE TOKEN_REG TOKEN_COMMA • TOKEN_REG

    TOKEN_REG  troca e vai para estado 121


Estado 98

   47 load_stmt: TOKEN_LOAD_DIRECT TOKEN_REG TOKEN_COMMA • immediate

    TOKEN_CARDINAL  troca e vai para estado 61

    immediate  vai para estado 122


Estado 99

   48 load_stmt: TOKEN_LOAD_IMMEDIATE TOKEN_REG TOKEN_COMMA • immediate

    TOKEN_CARDINAL  troca e vai para estado 61

    immediate  vai para estado 123


Estado 100

   49 load_stmt: TOKEN_LOAD_INDEXED TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 124


Estado 101

   50 store_stmt: TOKEN_STORE_DIRECT TOKEN_REG TOKEN_COMMA • immediate

    TOKEN_CARDINAL  troca e vai para estado 61

    immediate  vai para estado 125


Estado 102

   51 store_stmt: TOKEN_STORE_INDEXED TOKEN_REG TOKEN_COMMA • TOKEN_REG TOKEN_COMMA immediate

    TOKEN_REG  troca e vai para estado 126


Estado 103

   59 alloc_stmt: TOKEN_ALLOC TOKEN_IDENTIFIER TOKEN_NUMBER •

    $default  redução com regra 59 (alloc_stmt)


Estado 104

   61 equ_stmt: TOKEN_EQU TOKEN_IDENTIFIER TOKEN_COMMA • expression

    TOKEN_NUMBER      troca e vai para estado 90
    TOKEN_PLUS        troca e vai para estado 91
    TOKEN_MINUS       troca e vai para estado 92
    TOKEN_LEFT_PAREN  troca e vai para estado 93

    expression  vai para estado 127


Estado 105

   27 add_stmt: TOKEN_ADD TOKEN_REG TOKEN_COMMA TOKEN_REG • TOKEN_COMMA TOKEN_REG
   28         | TOKEN_ADD TOKEN_REG TOKEN_COMMA TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 128


Estado 106

   29 sub_stmt: TOKEN_SUB TOKEN_REG TOKEN_COMMA TOKEN_REG • TOKEN_COMMA TOKEN_REG
   30         | TOKEN_SUB TOKEN_REG TOKEN_COMMA TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 129


Estado 107

   31 or_stmt: TOKEN_OR TOKEN_REG TOKEN_COMMA TOKEN_REG • TOKEN_COMMA TOKEN_REG
   32        | TOKEN_OR TOKEN_REG TOKEN_COMMA TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 130


Estado 108

   33 and_stmt: TOKEN_AND TOKEN_REG TOKEN_COMMA TOKEN_REG • TOKEN_COMMA TOKEN_REG
   34         | TOKEN_AND TOKEN_REG TOKEN_COMMA TOKEN_REG • TOKEN_COMMA immediate

    TOKEN_COMMA  troca e vai para estado 131


Estado 109

   37 not_stmt: TOKEN_NOT TOKEN_REG TOKEN_COMMA TOKEN_REG •
